[package]
name = "tracing_utils"
description = "Utils for common tracing scenarios"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/mcmah309/tracing_utils"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
